baml_language/crates/baml_tests/snapshots/generic_call_ambiguity/baml_tests__generic_call_ambiguity__01_lexer__generic_call.snap
---
source: crates/baml_tests/src/generated_tests.rs
---
Slash "/"
Slash "/"
Word "Intent"
Colon ":"
Word "a"
Word "generic"
Word "call"
Word "inside"
Word "an"
Word "array"
Word "literal"
Colon ":"
Error "`"
LBracket "["
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
RBracket "]"
Error "`"
Dot "."
Slash "/"
Slash "/"
Error "`"
Greater ">"
Error "`"
Word "is"
Word "followed"
Word "directly"
Word "by"
Error "`"
LParen "("
Error "`"
Comma ","
Word "the"
Word "truly"
Word "ambiguous"
Word "shape"
Error "—"
Word "at"
Word "the"
Word "token"
Slash "/"
Slash "/"
Word "level"
Error "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Error "`"
Word "could"
Word "read"
Word "as"
Word "either"
Colon ":"
Slash "/"
Slash "/"
Minus "-"
Word "a"
Word "generic"
Word "call"
Error "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Error "`"
Comma ","
Word "or"
Slash "/"
Slash "/"
Minus "-"
Word "two"
Word "comparisons"
Error "`"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
DotDotDot "..."
RParen ")"
Error "`"
LParen "("
Word "Baml"
Word "has"
Word "no"
Word "tuples"
Comma ","
Word "but"
Word "the"
Slash "/"
Slash "/"
Word "parser"
Word "would"
Word "have"
Word "to"
Word "look"
Word "further"
Word "to"
Word "know"
Word "that"
RParen ")"
Dot "."
Slash "/"
Slash "/"
Slash "/"
Slash "/"
Word "The"
Word "parser"
Error "'"
Word "s"
Error "`"
Word "looks_like_generic_args"
Error "`"
Word "heuristic"
LParen "("
Word "parser"
Dot "."
Word "rs"
Colon ":"
IntegerLiteral "3914"
RParen ")"
Word "commits"
Slash "/"
Slash "/"
Word "to"
Word "generics"
Word "on"
Error "`"
Less "<"
Error "`"
Word "Word"
Error "`"
Comma ","
Error "`"
Slash "/"
Error "`"
Greater ">"
Error "`"
Slash "/"
Error "`"
Less "<"
Error "`"
Comma ","
Word "so"
Word "it"
Word "picks"
Word "the"
Word "call"
Word "interpretation"
Dot "."
Function "function"
Word "f"
Less "<"
Word "K"
Comma ","
Word "V"
Greater ">"
LParen "("
Word "k"
Colon ":"
Word "K"
Comma ","
Word "v"
Colon ":"
Word "V"
RParen ")"
Arrow "->"
Word "V"
LBrace "{"
Word "v"
RBrace "}"
Function "function"
Word "GenericCallInArray"
LParen "("
Word "k"
Colon ":"
Word "int"
Comma ","
Word "v"
Colon ":"
Word "string"
RParen ")"
Arrow "->"
Word "string"
LBracket "["
RBracket "]"
LBrace "{"
LBracket "["
Word "f"
Less "<"
Word "int"
Comma ","
Word "string"
Greater ">"
LParen "("
Word "k"
Comma ","
Word "v"
RParen ")"
RBracket "]"
RBrace "}"
